--- a/Interfaces/prueba_inicial_formulario/index.html
+++ b/Interfaces/prueba_inicial_formulario/index.html
@@ -44,7 +44,7 @@
     <section class="clave_confrim">
 
         <div class="clave" style="padding-top: 17px;">
-            <label for="confirm_password1">Confirmar Contraseña:</label><br>
+            <label for="confirm_password1">Contraseña:</label><br>
             <input type="password" id="confirm_password1" name="confirm_password1" required style="margin-top: 7px;"><br>
         
             <p style="cursor: pointer; font-size: small; margin-top: 2px; margin-left: 20px;" onclick="mostrar('confirm_password1', 'eyeIcon1')">
